# deep-sets-jax

./: .gitignore  README.md  pyproject.toml  train_and_test.ipynb
src/deep_sets_jax/: __init__.py  dataset.py  model.py
