[project]
name = "deep-sets-jax"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jérome Eertmans", email = "jeertmans@icloud.com" }
]
dependencies = [
    "jax[cpu]>=0.4.26",
    "equinox>=0.11.4",
    "notebook>=7.1.3",
    "matplotlib>=3.8.4",
    "jaxtyping>=0.2.28",
    "tqdm>=4.66.2",
    "beartype>=0.18.5",
    "requests>=2.31.0",
    "optax>=0.2.2",
    "ipywidgets>=8.1.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deep_sets_jax"]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-ignore = [
    "D203",  # no-blank-line-before-class
    "D212",  # multi-line-summary-second-line
    "F722",  # Syntax error in forward annotation
]
extend-select = ["B", "C90", "D", "I", "N", "RUF", "UP", "T"]
isort = {known-first-party = ["deep_sets_jax"]}

[tool.ruff.lint.per-file-ignores]
"**.ipynb" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"
